tests/dataset/tpc-ds/compiler/kotlin/q88.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/tmp/q88.kt:49:30: error: type mismatch: inferred type is MutableList<Store_sale> but MutableList<Any> was expected
val h8_30_to_9 = count_range(store_sales, time_dim, 8, 30, 60)
                             ^
/tmp/q88.kt:49:43: error: type mismatch: inferred type is MutableList<Time_dim> but MutableList<Any> was expected
val h8_30_to_9 = count_range(store_sales, time_dim, 8, 30, 60)
                                          ^
/tmp/q88.kt:51:30: error: type mismatch: inferred type is MutableList<Store_sale> but MutableList<Any> was expected
val h9_to_9_30 = count_range(store_sales, time_dim, 9, 0, 30)
                             ^
/tmp/q88.kt:51:43: error: type mismatch: inferred type is MutableList<Time_dim> but MutableList<Any> was expected
val h9_to_9_30 = count_range(store_sales, time_dim, 9, 0, 30)
                                          ^
/tmp/q88.kt:53:31: error: type mismatch: inferred type is MutableList<Store_sale> but MutableList<Any> was expected
val h9_30_to_10 = count_range(store_sales, time_dim, 9, 30, 60)
                              ^
/tmp/q88.kt:53:44: error: type mismatch: inferred type is MutableList<Time_dim> but MutableList<Any> was expected
val h9_30_to_10 = count_range(store_sales, time_dim, 9, 30, 60)
                                           ^
/tmp/q88.kt:55:32: error: type mismatch: inferred type is MutableList<Store_sale> but MutableList<Any> was expected
val h10_to_10_30 = count_range(store_sales, time_dim, 10, 0, 30)
                               ^
/tmp/q88.kt:55:45: error: type mismatch: inferred type is MutableList<Time_dim> but MutableList<Any> was expected
val h10_to_10_30 = count_range(store_sales, time_dim, 10, 0, 30)
                                            ^
/tmp/q88.kt:57:32: error: type mismatch: inferred type is MutableList<Store_sale> but MutableList<Any> was expected
val h10_30_to_11 = count_range(store_sales, time_dim, 10, 30, 60)
                               ^
/tmp/q88.kt:57:45: error: type mismatch: inferred type is MutableList<Time_dim> but MutableList<Any> was expected
val h10_30_to_11 = count_range(store_sales, time_dim, 10, 30, 60)
                                            ^
/tmp/q88.kt:59:32: error: type mismatch: inferred type is MutableList<Store_sale> but MutableList<Any> was expected
val h11_to_11_30 = count_range(store_sales, time_dim, 11, 0, 30)
                               ^
/tmp/q88.kt:59:45: error: type mismatch: inferred type is MutableList<Time_dim> but MutableList<Any> was expected
val h11_to_11_30 = count_range(store_sales, time_dim, 11, 0, 30)
                                            ^
/tmp/q88.kt:61:32: error: type mismatch: inferred type is MutableList<Store_sale> but MutableList<Any> was expected
val h11_30_to_12 = count_range(store_sales, time_dim, 11, 30, 60)
                               ^
/tmp/q88.kt:61:45: error: type mismatch: inferred type is MutableList<Time_dim> but MutableList<Any> was expected
val h11_30_to_12 = count_range(store_sales, time_dim, 11, 30, 60)
                                            ^
/tmp/q88.kt:63:32: error: type mismatch: inferred type is MutableList<Store_sale> but MutableList<Any> was expected
val h12_to_12_30 = count_range(store_sales, time_dim, 12, 0, 30)
                               ^
/tmp/q88.kt:63:45: error: type mismatch: inferred type is MutableList<Time_dim> but MutableList<Any> was expected
val h12_to_12_30 = count_range(store_sales, time_dim, 12, 0, 30)
                                            ^
/tmp/q88.kt:80:154: error: type inference failed. Expected type mismatch: inferred type is Any? but Boolean was expected
            if (toInt(toInt((ss as MutableMap<*, *>)["sold_time_sk"] == (t as MutableMap<*, *>)["time_sk"] && (t as MutableMap<*, *>)["hour"] == hour && (t as MutableMap<*, *>)["minute"]) >= start_min && (t as MutableMap<*, *>)["minute"]) < end_min) {
                                                                                                                                                         ^
/tmp/q88.kt:80:205: error: type inference failed. Expected type mismatch: inferred type is Any? but Boolean was expected
            if (toInt(toInt((ss as MutableMap<*, *>)["sold_time_sk"] == (t as MutableMap<*, *>)["time_sk"] && (t as MutableMap<*, *>)["hour"] == hour && (t as MutableMap<*, *>)["minute"]) >= start_min && (t as MutableMap<*, *>)["minute"]) < end_min) {
                                                                                                                                                                                                            ^
